--- a/TODO
+++ b/TODO
@@ -8,12 +8,11 @@ Stephan's TODO
 Matthew's TODO
 --------------
 
-* Expose _data as dataobj
-* Implement slicing on dataobj (BIAP2)
 * Move file_map to {filename, fileobj, (filename, offset), (fileobj, offset)
   with suitable change warning
-* RO properties for affine, header.  Update docs
-* is_proxy helper function and attribute for proxy objects
+* RO properties for affine, header - Update docs
 * consider deprecating data_dtype methods for images.
 * new data package model
-
+* Add API checks that number of zoom elements matches number of dimensions, for
+  `get_zooms` in header.  This currently isn't so for mgh format.
+* Add tests for conversions between image and header formats.
